syntax = "proto3";

message Header {
    string name = 1;
    repeated string value = 2;
}

message WebRequest {
    int64 ReceivedAt = 1;
    repeated Header Header = 2;
    string Host = 3;
    string Body = 4;
}

message PopRequest {
    string QueueName = 1;
}

message PopResponse {
    WebRequest WebRequest = 1;
}

message BPopRequest {
    string QueueName = 1;
    int64 Timeout = 2;
}

message BPopResponse {
    WebRequest WebRequest = 1;
}

message PeekRequest {
    string QueueName = 1;
    int64 Count = 2;
}

message PeekResponse {
    repeated WebRequest WebRequest = 1;
}

message PushRequest {
    string QueueName = 1;
    repeated WebRequest WebRequest = 2;
}

message PushResponse {
}

service Queue {
    rpc Pop (PopRequest) returns (PopResponse);
    rpc BPop (BPopRequest) returns (BPopResponse);
    rpc Peek (PeekRequest) returns (PeekResponse);
    rpc Push (PushRequest) returns (PushResponse);
}
